# QuickBot-Installer

./: IMPLEMENTATION.md  INSTALL.txt  QuickBot-Installer-2.0.0.pkg  README.md  brewinstall.sh  install.sh  pyproject.toml  uninstall.sh  update-installer.sh  updater.sh
QuickBot Installer.app/Contents/: Info.plist  document.wflow
QuickBot Installer.app/Contents/MacOS/: Automator Application Stub
QuickBot Installer.app/Contents/_CodeSignature/: CodeResources
